# template-pytorch

./: README.md  pyproject.toml
finetune_template/: __init__.py  train.py
finetune_template/config/: config.yaml
finetune_template/data/: train.jsonl
finetune_template/src/: __init__.py  data.py  model.py  trainer.py  utils.py
