[project]
name = "template-pytorch-lora"
version = "0.1.0"
description = "PyTorch + LoRA fine-tuning template managed by uv"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "accelerate>=0.30.0",
  "datasets>=2.20.0",
  "numpy>=1.26.0",
  "peft>=0.11.0",
  "pyyaml>=6.0.0",
  "torch>=2.4.0",
  "torchaudio>=2.4.0",
  "torchvision>=0.19.0",
  "transformers>=4.45.0",
  "trl>=0.9.0",
]

[project.scripts]
train-lora = "finetune_template.train:main"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
